# phice

./: .gitignore  Dockerfile  README.md  app.py  config.example.json  config.example.toml  docker-compose.yaml  dprint.json  pyproject.toml
scripts/: fetch_data.py
src/: __init__.py  config.py  flask_utils.py  jinja_filters.py  jinja_globals.py  settings.py
src/lib/: api.py  datatypes.py  exceptions.py  extractor.py  parsers.py  utils.py  wrappers.py
src/lib/data/: doc_ids.json  extra_variables.json
src/routes/: albums.py  cdn.py  error.py  groups.py  home.py  posts.py  profile.py  search.py  settings.py  share.py
src/static/: album.css  error.css  style.css  timeline.css
src/static/themes/: black.css  catppuccin_latte.css  catppuccin_mocha.css
src/templates/: album.html.jinja  albums.html.jinja  base.html.jinja  context_macros.html.jinja  error.html.jinja  macros.html.jinja  post.html.jinja  posts.html.jinja  search.html.jinja  settings.html.jinja  timeline.html.jinja  timeline.rss.jinja
